<?xml version="1.0" encoding="utf-8"?>
<android.widget.ScrollView android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1EBEBEB"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:gravity="center"
        android:orientation="vertical">
<TextView
    android:id="@+id/know"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/KnowYourTripDetails"
    android:textSize="25sp"
    android:textStyle="bold"
    android:textAlignment="center"
    android:textColor="@color/purple_200"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="50dp"

    />
    <TextView
        android:id="@+id/start_title"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/ChooseStartStation"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity = "center_vertical"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/know"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"

        />
    <AutoCompleteTextView
        android:id="@+id/start_spinner"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/corner_radius"
        android:hint="@string/startStation"
        android:completionThreshold="1"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/start_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>
<!--    <Spinner-->
<!--        android:id="@+id/start_spinner"-->
<!--        android:layout_width="350dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:background="@drawable/corner_radius"-->
<!--        android:entries="@array/lines"-->

<!--        android:layout_marginTop="15dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/start_title"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        />-->
    <TextView
        android:id="@+id/end_title"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/ChooseEndStation"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/start_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"

        />
    <AutoCompleteTextView
        android:id="@+id/end_spinner"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/corner_radius"
        android:hint="@string/endStation"
        android:completionThreshold="1"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/end_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/calc"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/button_corner"
        android:text="@string/knowdetails"
        android:textColor="@color/white"
        android:onClick="showDetails"
        app:layout_constraintTop_toBottomOf="@id/end_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/directions"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="start"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/calc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/route"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="start"
        android:textColor="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@id/directions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/time"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="start"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/route"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        />

</LinearLayout>
</android.widget.ScrollView>